--- a/src/App.css
+++ b/src/App.css
@@ -51,6 +51,20 @@ html,
     animation-fill-mode: both;
 }
 
+.flex-content-center {
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-flex: 0 1 auto;
+    -webkit-flex-flow: row wrap;
+    -ms-flex-flow: row wrap;
+    flex-flow: row wrap;
+    flex-wrap: wrap;
+    -webkit-flex-wrap: wrap;
+}
+
 @-webkit-keyframes fadeInUp {
     0% {
         opacity: 0;
